trait_map_derive/tests/ui/fail/invalid_syntax.stderr
error: unexpected attribute, please specify a valid trait
 --> tests/ui/fail/invalid_syntax.rs:8:22
  |
8 | #[trait_map(MyTrait, "literal", true, value = "5")]
  |                      ^^^^^^^^^

error: unexpected attribute, please specify a valid trait
 --> tests/ui/fail/invalid_syntax.rs:8:33
  |
8 | #[trait_map(MyTrait, "literal", true, value = "5")]
  |                                 ^^^^

error: unexpected attribute, please specify a valid trait
 --> tests/ui/fail/invalid_syntax.rs:8:39
  |
8 | #[trait_map(MyTrait, "literal", true, value = "5")]
  |                                       ^^^^^^^^^^^
